deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%　 #アップデート中に最大に増やしていいいポッドの数
      maxUnavailable: 25%　#アップデート中に最大で２５％のインスタンスが使用できなくなる
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      serviceAccountName: test-sa
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80　 # コンテナが開けるポート
