ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  defaultBackend:　#下記のパスに一致しない場合の送り先。リダイレクトなどで使う
    service:
      name: test
      port:
        number: 80
　　　　ingressClassName: nginx #nginxというingresscontrollerに管理されるkubeclgetingressclassesで存在するクラスを確認
  rules:
    - host: example.com #このドメインでアクセス
      http:
        paths:
          - path: /app1　#example.com/app1が来たらservice1にトラフィック
            pathType: Prefix　#/app1/abcでも通す
            backend:
              service:
                name: service1
                port:
                  number: 80
          - path: /app2
            pathType: Exact #/app2/abcは通らない
            backend:
              service:
                name: service2
                port:
                  number: 80
